<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ExpressVideo</string>
    <string name="publish">Publish</string>
    <string name="play">play</string>
    <string name="start_publishing">Start Publishing</string>
    <string name="start_playing">Start Playing</string>
    <string name="preview">Preview</string>
    <string name="play_stream">Play Stream</string>
    <string name="stop_publishing">stop publishing</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="rotate_mode">Rotate Mode</string>
    <string name="polish">Polish</string>
    <string name="polish_step">Polish Step</string>
    <string name="skin_whiten">Skin Whiten</string>
    <string name="whiten">Whiten</string>
    <string name="whiten_factor">Whiten Factor</string>
    <string name="sharpen_factor">Sharpen Factor</string>
    <string name="sharpen">Sharpen</string>
    <string name="watermark">Watermark</string>
    <string name="watermark_file">Watermark File</string>
    <string name="is_preview_visible">isPreviewVisible</string>
    <string name="snapshot">Snapshot</string>
    <string name="take_snapshot">Take Snapshot</string>
    <string name="beautify">Beautify</string>
    <string name="choose_file">Choose File</string>
    <string name="choose_background_image">Choose Background Image</string>
    <string name="choose_background_video">Choose Background Video</string>
    <string name="beauty_watermark_snapshot">Watermark,Snapshot</string>
    <string name="tx_mixer_publish_ok"> Push stream successfully </string>
    <string name="tx_mixer_publish_request"> requesting push stream </string>
    <string name="tx_mixer_publish_fail"> Push stream failed, error code is </string>
    <string name="tx_mixer_stop_publish_ok"> Stop pushing successfully </string>
    <string name="tx_mixer_hint"> Please select at least one remote stream to participate in mixing </string>
    <string name="tx_mixer_start_ok"> Start mixing success </string>
    <string name="tx_mixer_start_fail"> Start mixing failed, error code is </string>
    <string name="tx_mixer_stop_ok"> Stop mixing success </string>
    <string name="tx_mixer_stop_fail"> Stop mixing failed with error code </string>
    <string name="tx_mixer_usage_title"> Instructions for use: </string>
    <string name="tx_mixer_usage_content"> This topic requires the use of three devices to experience, of which two devices initiate streaming and another device initiates mixing and watching </string>
    <string name="tx_mixer_publish"> Initiate push stream </string>
    <string name="tx_mixer_stop_publish"> stop pushing stream </string>
    <string name="tx_mixer_mix"> Initiate mixed flow </string>
    <string name="tx_mixer_auto_mix"> Initiate auto mixed flow </string>
    <string name="tx_mixer_step1"> 1. Initiate and watch mixed stream </string>
    <string name="tx_mixer_step2"> 2. Stop watching mixed stream </string>
    <string name="tx_mixer_step3"> 3. Stop mixing flow </string>
    <string name="start_auto_stream_mixing"> Start Auto Stream Mixing </string>
    <string name="stop_auto_stream_mixing"> Stop Auto Stream Mixing </string>
    <string name="stream_mixing">Stream Mixing</string>
    <string name="auto_stream_mixing">Auto Stream Mixing</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_local_media">Play Local Media</string>
    <string name="recording">Recording</string>
    <string name="stop_local_media">Stop Local Media</string>
    <string name="network_resource">Network Resource</string>
    <string name="local_resource">Local Resource</string>
    <string name="repeat">Repeat</string>
    <string name="enable_aux">Enable Aux</string>
    <string name="mute_local">Mute Local</string>
    <string name="pitch">Pitch:</string>
    <string name="speed">Speed:</string>
    <string name="media_player">Media Player</string>
    <string name="sample" translatable="false">sample.mp3</string>
    <string name="ad" translatable="false">ad.mp4</string>
    <string name="test" translatable="false">test.mp4</string>
    <string name="sample_bgm" translatable="false">sample_bgm.mp3</string>
    <string name="sample_network" translatable="false">sample_network.mp4</string>
    <string name="camera_zoom_factor">Camera Zoom Factor:</string>
    <string name="multiple_rooms">Multiple Rooms</string>
    <string name="traffic_control">TrafficControl</string>
    <string name="min_video_bitrate">MinVideoBitrate</string>
    <string name="flow_control">Traffic Control</string>
    <string name="networkspeed_test">NetworkSpeed Test</string>
    <string name="downlink">Downlink</string>
    <string name="uplink">Uplink</string>
    <string name="expected_downlink_bitrate">Expected Downlink Bitrate</string>
    <string name="expected_uplink_bitrate">Expected Uplink Bitrate</string>
    <string name="start_network_speed_test">Start Network Speed Test</string>
    <string name="performance_monitor">Performance Monitor</string>
    <string name="start_performance_monitor">Start  Performance Monitor</string>
    <string name="network_and_performance">Network and Performance</string>
    <string name="stop_network_speed_test">Stop Network Speed Test</string>
    <string name="set_publish_stream_encryption_key">Set Publish Stream Encryption Key</string>
    <string name="set_play_stream_decryption_key">Set Play Stream Decryption Key</string>
    <string name="security">Security</string>
    <string name="start_screen_capture">Start Screen Capture</string>
    <string name="stop_screen_capture">Stop Screen Capture</string>
    <string name="screen_sharing">Screen Sharing</string>
    <string name="sure">Sure</string>
    <string name="sei">Supplemental Enhancement Information</string>
    <string name="EncryptPublishNotice">The secret key used to encrypt the stream when pushing the stream, you can use a string of 16/24/32 characters in length</string>
    <string name="EncryptPlayNotice">The secret key used for decryption when pulling the stream must be consistent with the push secret key to decrypt and pull the stream successfully</string>
    <string name="info">For more advanced beauty, you can use real-time audio and video and AI vision to realize the beauty function. You can refer to the help document of the ZEGO Developer Center.</string>
    <string name="document">document</string>
    <string name="publish_streamID">Publish StreamID</string>
    <string name="focus_support">Support Focus： </string>
    <string name="camera_selection">Camera Selection</string>
    <string name="focus_mode">Focus Mode</string>
    <string name="exposure_mode">Exposure Mode</string>
    <string name="camera_focus">Camera Focus</string>
    <string name="camera_exposure">Camera Exposure</string>
    <string name="exposure_compensation">Exposure Compensation</string>
    <string name="encode_resolution">Encode Resolution</string>
    <string name="capture_resolution">Capture Resolution</string>
    <string name="captureResolutionTitle">Capture resolution，User settings control the resolution of camera image capture, which needs to be set to an even number</string>
    <string name="video_fps">Video FPS</string>
    <string name="video_bitrate">Video Bitrate</string>
    <string name="enable_effects_beauty">Effects Beauty</string>
    <string name="beauty_whiten">Whiten[0,100]</string>
    <string name="beauty_rosy">Rosy[0,100]</string>
    <string name="beauty_smooth">Smooth[0,100]</string>
    <string name="beauty_sharpen">Sharpen[0,100]</string>
    <string name="mix_stream_id_1">Stream_1</string>
    <string name="mix_stream_id_2">Stream_2</string>
    <string name="mix_whiteboard">Whiteboard</string>
    <string name="mix_whiteboard_id">Whiteboard ID</string>
    <string name="mix_whiteboard_layout_left">Left</string>
    <string name="mix_whiteboard_layout_top">Top</string>
    <string name="mix_whiteboard_layout_right">Right</string>
    <string name="mix_whiteboard_layout_bottom">Bottom</string>
    <string name="mix_whiteboard_zorder">ZOrder</string>
    <string name="mix_is_ppt_animation">Animation PPT</string>
    <string name="mixer_update_whiteboard_config">Update Whiteboard Config</string>
    <string name="mix_image_info">Image URI</string>
    <string name="super_resolution">Super Resolution</string>
    <string name="subject_segmentation">Object Segmentation</string>
    <string name="subject_segmentation_type">Object Segmentation Type</string>
    <string name="subject_segmentation_max_resolution">Object Segmentation Max Resolution</string>
    <string name="subject_segmentation_hex_color">Object Segmentation Hex Color</string>
    <string name="background_picture">Background Picture</string>
    <string name="hardware_encode">Hardware Encode</string>
    <string name="hardware_decode">Hardware Decode</string>
    <string name="hardware_encode_title">Hardware Encode: </string>
    <string name="hardware_decode_title">Hardware Decode: </string>
    <string name="refresh">Refresh</string>
    <string name="video_source_type">Video Source Type</string>
    <string name="audio_source_type">Audio Source Type</string>
    <string name="multi_video_source">Multiple Video Source</string>
    <string name="video_source_none">None</string>
    <string name="video_source_camera">Camera</string>
    <string name="video_source_default">Default</string>
    <string name="video_source_external_capture">External Capture</string>
    <string name="video_source_media_player">Player</string>
    <string name="video_source_media_player_using_network_resource">Player(Network Resource)</string>
    <string name="video_source_screen_sharing">Screen Sharing</string>
    <string name="video_source_main_publish_channel">From Main Publish Channel</string>
    <string name="video_source_custom_capture_raw_data">Custom(Camera-Raw Data)</string>
    <string name="video_source_custom_capture_gl_texture_2d">Custom(Camera-GL_Texture_2D)</string>
    <string name="video_source_custom_capture_encoded_data">Custom(Camera-Encoded Data)</string>
    <string name="video_source_custom_capture_image_raw_data">Custom(Image-Raw Data)</string>
    <string name="video_source_custom_capture_image_gl_texture_2d">Custom(Image-GL_Texture_2D)</string>
    <string name="video_source_custom_capture_image_encoded_data">Custom(Image-Encoded Data)</string>
    <string name="video_source_custom_capture">Custom Capture</string>
    <string name="audio_source_none">None</string>
    <string name="audio_source_microphone">Microphone</string>
    <string name="audio_source_media_player">Player</string>
    <string name="audio_source_main_publish_channel">Copy From Main Publish Channel</string>
    <string name="audio_source_custom_capture_pcm">Custom(Mic-PCM)</string>
    <string name="audio_source_custom_capture_file_pcm">Custom(File-PCM)</string>
    <string name="audio_source_custom_capture_file_aac">Custom(File-AAC)</string>
    <string name="audio_source_screen_capture">Screen Capture</string>
    <string name="local_preview">Local Preview</string>
    <string name="main_channel_title">Main-Channel1</string>
    <string name="aux_channel_title">Aux-Channel2</string>
    <string name="video_audio_source_restriction_desc">Audio and video sources can only be occupied by one of the channels</string>
    <string name="multi_video_source_stream_id">Stream ID</string>
    <string name="play_stream_title">Play Stream</string>
    <string name="create_engine">Create Engine</string>
    <string name="room_id">Room ID</string>
    <string name="user_id">User ID</string>
    <string name="update_ai_voice_changer_model">Update Model</string>
    <string name="set_speaker_title">Set Speaker</string>
    <string name="play_StreamID">Play ID</string>
    <string name="ear_return">Enable Ear Return</string>
</resources>