<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aivoicechanger.AIVoiceChanger">
    <im.zego.commontools.logtools.logLinearLayout
        android:id="@+id/logView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/roomStateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Room state"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@+id/logView"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/roomState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_toRightOf="@id/roomStateTitle"
        android:layout_below="@id/logView"
        android:layout_toEndOf="@id/roomStateTitle" />

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/roomState"
        android:visibility="gone"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_below="@id/roomStateTitle"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/roomIDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="@string/room_id"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editRoomID"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/roomIDTitle"
            android:layout_toRightOf="@id/roomIDTitle"
            android:background="@drawable/edit_round"
            android:padding="5dp"
            android:text="0037"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editUserID"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_round"
            android:padding="5dp"
            android:text="0037"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/userIDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_margin="10dp"
            android:layout_toStartOf="@id/editUserID"
            android:layout_toLeftOf="@id/editUserID"
            android:text="@string/user_id"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/updateModelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editUserID"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/update_ai_voice_changer_model"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/speakerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/updateModelButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/set_speaker_title"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/setSpeakerSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/updateModelButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/earReturnTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setSpeakerSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ear_return"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/earReturnSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_below="@id/setSpeakerSpinner"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/publishStreamTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/earReturnSwitch"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/publish_streamID"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/publishStreamID"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/earReturnSwitch"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@id/publishStreamTitle"
            android:layout_toRightOf="@id/publishStreamTitle"
            android:background="@drawable/edit_round"
            android:padding="5dp"
            android:text="0037"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/publishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/earReturnSwitch"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start_publishing"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/playStreamTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/publishButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/play_StreamID"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/playStreamID"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/publishButton"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@id/playStreamTitle"
            android:layout_toRightOf="@id/playStreamTitle"
            android:background="@drawable/edit_round"
            android:padding="5dp"
            android:text="0037"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/publishButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start_playing"
            android:textSize="15sp" />

    </RelativeLayout>
</RelativeLayout>