<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context="com.example.others.beautyandwatermarkandsnapshot.BeautyWatermarkSnapshotActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <im.zego.commontools.logtools.logLinearLayout
            android:id="@+id/logView"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RoomID:0024 PublishStreamID:0024 PlayStreamID:0024"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/roomStateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="Room state"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/roomState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true" />

            <TextureView
                android:id="@+id/PreviewView"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toStartOf="@id/view"
                android:layout_toLeftOf="@id/view" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@id/view"
                android:layout_toLeftOf="@id/view"
                android:gravity="center"
                android:text="Preview"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextureView
                android:id="@+id/PlayView"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_alignParentRight="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@id/view"
                android:layout_toRightOf="@id/view" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/view"
                android:layout_toRightOf="@id/view"
                android:gravity="center"
                android:text="Play Stream"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Button
                android:id="@+id/snapshotPublisherButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/startPublishButton"
                android:layout_alignStart="@+id/PreviewView"
                android:layout_alignLeft="@id/PreviewView"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/view"
                android:text="@string/take_snapshot" />

            <Button
                android:id="@+id/snapshotPlayerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/startPublishButton"
                android:layout_alignEnd="@id/PlayView"
                android:layout_alignRight="@id/PlayView"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/view"
                android:text="@string/take_snapshot" />

            <Button
                android:id="@+id/startPublishButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/PreviewView"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toLeftOf="@id/view"
                android:text="@string/start_publishing" />

            <Button
                android:id="@+id/startPlayButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/PreviewView"
                android:layout_margin="10dp"
                android:layout_toRightOf="@id/view"
                android:text="@string/start_playing" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/waterMarkFileTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/watermark_file"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/chooseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:text="@string/choose_file" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/waterMark"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/watermark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/isPreviewVisible"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/is_preview_visible" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
    </ScrollView>